Refactor medUsageController.js and swagger_output.json
